[package]
name = "pgextkit"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[features]
default = []
extension = ["libc", "libloading"]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = ["extension"]

[dependencies]
anyhow = "1.0.66"
bitflags = "1.3.2"
good_memory_allocator = "0.1.7"
hash32 = "0.3.1"
heapless = "0.7.16"
libc = { version = "0.2.135", optional = true }
libloading = { version = "0.7.3", optional = true }
once_cell = "1.15.0"
parse-size = { version = "1.0.0", features = ["std"] }
pgx = { version = "0.5.6", git = "https://github.com/tcdi/pgx", rev = "4ad8a91" }
pin-project = "1.0.12"
uuid = { version = "1.2.1", features = ["v4"]}

[dev-dependencies]
pgx-tests = { version = "0.5.6", git = "https://github.com/tcdi/pgx", rev = "4ad8a91" }

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
