[package]
name = "example"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13", "extension"]
extension = []
pg11 = ["pgx/pg11", "pgx-tests/pg11", "pgextkit/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12", "pgextkit/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13", "pgextkit/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14", "pgextkit/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15", "pgextkit/pg15" ]

pg_test = []

[dependencies]
pgx = { version = "0.6.0-alpha.0", git = "https://github.com/tcdi/pgx", rev = "3dc973a" }
pgextkit = { path = ".." }
once_cell = "1.15.0"
heapless = "0.7.16"

[dev-dependencies]
pgx-tests = { version = "0.6.0-alpha.0", git = "https://github.com/tcdi/pgx", rev = "3dc973a" }

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
